Bug 197715 - "Konqueror Introduction" has wrong icon for "Home Folder"
Summary: "Konqueror Introduction" has wrong icon for "Home Folder"
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-24 12:33 UTC by James Richard Tyrer
Modified: 2009-09-08 15:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Wrong icon. (16.47 KB, image/png)
2009-06-24 12:35 UTC, James Richard Tyrer
Details
Patch to fix (860 bytes, patch)
2009-06-25 23:27 UTC, James Richard Tyrer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description James Richard Tyrer 2009-06-24 12:33:09 UTC
Version:           4.2.92 (using Devel)
Compiler:          GCC 4.3.3 
OS:                Linux
Installed from:    Compiled sources

The Konqueror Introduction page is using the "actions::go-home" rather than the "places::user-home" icon.

Since this does not match the use in Konqueror, I presume that this is an error.
Comment 1 James Richard Tyrer 2009-06-24 12:35:45 UTC
Created attachment 34781 [details]
Wrong icon.
Comment 2 James Richard Tyrer 2009-06-25 23:27:23 UTC
Created attachment 34812 [details]
Patch to fix

Trivial change but important for good usability.

Current icon will confuse users.
Comment 3 FiNeX 2009-09-08 15:02:45 UTC
SVN commit 1021170 by finex:

Changed icon. Now the icon is coherent with kickoff and dolphin.

BUG: 197715



 M  +1 -1      konq_aboutpage.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1021170