Changed icon. Now the icon is coherent with kickoff and dolphin.

BUG: 197715


svn path=/trunk/KDE/kdebase/apps/; revision=1021170